# gopigo3_ros2_humble_ignition_gazebo

./: README.md  package.xml  setup.cfg  setup.py
config/: gz_bridge.yaml
launch/: gopigo3_spawn.launch.py  gopigo3_turtlebot3_world.launch.py
models/turtlebot3_world/: model-1_4.sdf  model.sdf
scripts/: drive.py  gopigo3_test.py
urdf/: gopigo3.gazebo.xacro  gopigo3.urdf.xacro
worlds/: empty.world  turtlebot3_world.world
